fix: z-index on safari

--- a/styles/card.css
+++ b/styles/card.css
@@ -121,6 +121,7 @@ project-card::after {
   width: 50%;
   max-width: 680px;
   z-index: 3;
+  position: sticky;
 }
 
 .modal {
